index file updated, indexTwo file created

--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>My first web page</title>
     <style>
-        img {
-            width: 100px;
-            border-radius: 50px;
-            float: left;
-            margin-right: 10px;
-        }
+      img {
+        width: 100px;
+        border-radius: 50px;
+        float: left;
+        margin-right: 10px;
+      }
 
-        .username {
-            font-weight: bold;
-        }
+      .username {
+        font-weight: bold;
+      }
     </style>
   </head>
   <body>
-    <img src="images/uk-france-night-2016-EARTH1116-2c03d786e8824e13ad10758aa8bd832f.jpg">
+    <img
+      src="images/uk-france-night-2016-EARTH1116-2c03d786e8824e13ad10758aa8bd832f.jpg"
+      alt="An image of earth from space focused on the UK and France"
+    />
     <p class="username">@tristanjarvey</p>
     <p>Excited to learn html</p>
   </body>
