images file created, minor edits to other files

--- a/hyperlinks.html
+++ b/hyperlinks.html
@@ -7,11 +7,7 @@
   </head>
   <body>
     <a href="company/about.html">About Me</a>
-    <a
-      href="/images/uk-france-night-2016-EARTH1116-2c03d786e8824e13ad10758aa8bd832f.jpg"
-      download
-      >Download "night earth"</a
-    >
+    <a href="/images/nightEarth.jpg" download>Download "night earth"</a>
     <a href="#css">CSS Section</a>
     <a href="https://google.com" target="_blank">Google</a>
     <a href="mailto:tjohnjarvey@gmail.com">Email Me</a>
