--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <img
-      src="images/uk-france-night-2016-EARTH1116-2c03d786e8824e13ad10758aa8bd832f.jpg"
+      src="images/nightEarth.jpg"
       alt="An image of earth from space focused on the UK and France"
     />
     <p class="username">@tristanjarvey</p>
