--- a/CSS/Other Files/indexNormalizingCSS.html
+++ b/CSS/Other Files/indexNormalizingCSS.html
@@ -12,7 +12,7 @@
       }
     </style>
   </head>
-  <body style="background-color: #1e1e1e">
+  <body>
     <p style="color: antiquewhite; font-weight: bold">
       Lorem ipsum dolor sit amet.
     </p>
